--- a/Hotel app/frontend/package.json
+++ b/Hotel app/frontend/package.json
@@ -5,19 +5,26 @@
   "dependencies": {
     "@material-ui/core": "^4.9.0",
     "@material-ui/icons": "^4.5.1",
+    "babel-preset-es2015": "^6.24.1",
     "material-table": "^1.54.2",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-qr-reader": "^2.2.1",
     "react-router-dom": "^5.1.2",
-    "react-scripts": "0.9.5"
+    "react-scripts": "0.9.5",
+    "react-toastify": "^9.1.1",
+    "toastify-js": "^1.12.0"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "autoprefixer": "^10.4.13",
+    "postcss": "^8.4.20",
+    "tailwindcss": "^3.2.4"
+  },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
   },
-  "proxy": "http://localhost:5000"
+  "proxy": "https://darkevo24.pythonanywhere.com/"
 }
