--- a/Hotel app/frontend/package.json
+++ b/Hotel app/frontend/package.json
@@ -7,6 +7,7 @@
     "@material-ui/icons": "^4.5.1",
     "material-table": "^1.54.2",
     "react": "^16.12.0",
+    "react-countdown": "^2.3.5",
     "react-dom": "^16.12.0",
     "react-otp-input": "^2.4.0",
     "react-qr-code": "^2.0.11",
@@ -16,7 +17,6 @@
     "styled-components": "^5.3.6",
     "toastify-js": "^1.12.0"
   },
-  "devDependencies": {},
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
