--- a/Hotel app/frontend/package.json
+++ b/Hotel app/frontend/package.json
@@ -3,12 +3,16 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@emotion/react": "^11.10.5",
+    "@emotion/styled": "^11.10.5",
     "@material-ui/core": "^4.9.0",
     "@material-ui/icons": "^4.5.1",
+    "@mui/material": "^5.11.2",
     "material-table": "^1.54.2",
     "react": "^16.12.0",
     "react-countdown": "^2.3.5",
     "react-dom": "^16.12.0",
+    "react-modal": "^3.16.1",
     "react-otp-input": "^2.4.0",
     "react-qr-code": "^2.0.11",
     "react-qr-reader": "^2.2.1",
