--- a/Hotel app/frontend/package.json
+++ b/Hotel app/frontend/package.json
@@ -5,8 +5,8 @@
   "dependencies": {
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
-    "@material-ui/core": "^4.9.0",
-    "@material-ui/icons": "^4.5.1",
+    "@material-ui/core": "^4.12.4",
+    "@material-ui/icons": "^4.11.3",
     "@mui/material": "^5.11.2",
     "material-table": "^1.54.2",
     "react": "^16.12.0",
@@ -21,6 +21,7 @@
     "styled-components": "^5.3.6",
     "toastify-js": "^1.12.0"
   },
+  "devDependencies": {},
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
